Fix information that was not centered.

--- a/syles.css
+++ b/syles.css
@@ -109,6 +109,7 @@ a {
     display: flex;
     gap: 50px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .image-and-text img {
